fixed: build iOS project on Unity 2020.3.x

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ Assembly-CSharp-Editor.csproj
 Assembly-CSharp.csproj
 obj/*
 .DS_Store
-Logs/Packages-Update.log
+Logs/*
 toriki.sln
+
+Assets/Resources.meta
